# corybuecker.com

./: .babelrc  .env  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .tool-versions  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml  generate_sitemap.js  mix.exs  next.config.js  nginx.conf  nginx.local.conf  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.dev.config.js  webpack.integration.config.js  webpack.production.config.js
.github/: dependabot.yml
assets/: package-lock.json  package.json  webpack.config.js  webpack.dev.config.js  webpack.production.config.js
components/: header.js  header.tsx  image.js  image.tsx  post.js  post.tsx  post_preview.js  post_preview.tsx  revised.tsx  tracked_anchor.tsx  tracked_link.tsx
config/: config.exs  dev.exs  integration.exs  prod.exs
content/: 001-an-introduction.md  002-how-to-make-a-static-blog-in-markdown-and-nextjs.md  003-how-to-run-a-static-site-in-google-cloud-run.md  004-automating-cloud-run-deploy-from-github-actions-part-one.md  005-automating-cloud-run-deploy-from-github-actions-part-two.md  2019-11-30-an-introduction.md  2019-12-01-how-to-make-a-static-blog-in-markdown-and-nextjs.md  2019-12-08-how-to-run-a-static-site-in-google-cloud-run.md  2019-12-14-automating-cloud-run-deploy-from-github-actions.md
layouts/: index.eex  index.eex.html  index.html  post.eex  post.eex.html  sitemap.eex
lib/: blog_builder.ex  builder.ex
pages/: index.js  index.tsx
src/: analytics.js  analytics.ts  compile_content.js  compile_markdown.ts  constants.ts  index.js  (+7 more)
(+44 files in other folders)
